--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,19 @@ click==8.1.6
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+cron-descriptor==1.4.0
 Django==4.2.4
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
 django-filter==23.2
+django-redis==5.3.0
+django-timezone-field==5.1
 djangorestframework==3.14.0
 idna==3.4
 kombu==5.3.1
 prompt-toolkit==3.0.39
 pycparser==2.21
+python-crontab==3.0.0
 python-dateutil==2.8.2
 pytz==2023.3
 rabbitmq==0.2.0
